# libblockdev

./: .coderabbit.yaml  .gitignore  .lgtm.yml  .packit.yaml  .project  30-api-changes.html  HACKING.md  LICENSE  Makefile  Makefile.am  NEWS.rst  README  README.DEVEL.md  README.DEVEL.rst  README.md  Sconscript  Sconstruct  acinclude.m4  annotation-glossary.html  api-index-full.html  autogen.sh  boilerplate_generator.py  ch01.html  ch02.html  ch03.html  configure.ac  deprecated-api-index.html  features.rst  index.html  index.sgml  libblockdev-BTRFS.html  libblockdev-Crypto.html  libblockdev-DeviceMapper.html  libblockdev-FS.html  libblockdev-KernelBlockDevices.html  libblockdev-LVM.html  libblockdev-Loop.html  libblockdev-MD-RAID.html  libblockdev-Mpath.html  libblockdev-NVDIMM.html  (+12 more)
3.0/: 30-api-changes.html  annotation-glossary.html  api-index-full.html  ch01.html  ch02.html  ch03.html  index.html  libblockdev-BTRFS.html  libblockdev-Crypto.html  libblockdev-DeviceMapper.html  libblockdev-FS.html  libblockdev-KernelBlockDevices.html  libblockdev-LVM.html  libblockdev-Loop.html  libblockdev-MD-RAID.html  libblockdev-Mpath.html  libblockdev-NVDIMM.html  libblockdev-NVMe.html  libblockdev-Part.html  libblockdev-Plugins.html  libblockdev-Swap.html  libblockdev-Utils.html  libblockdev-blockdev-library.html  libblockdev-s390.html  libblockdev.devhelp2
BlockDev-3.0/: callbacks.html  constants.html  enums.html  flags.html  functions.html  index.html  mapping.html  objects.inv  searchindex.js  structs.html
_static/: documentation_options.js
docs/: 3.0-api-changes.xml  Makefile.am  libblockdev-docs.xml  libblockdev-docs.xml.in  libblockdev-sections.txt
include/blockdev/: Makefile.am
src/lib/: Makefile.am  blockdev.c  blockdev.c.in  blockdev.h  blockdev.pc.in  plugins.c  plugins.h  test_blockdev.c
src/lib/plugin_apis/: Makefile.am  btrfs.api  btrfs.api.in  btrfs.h  common.api  common.h  crypto.api  crypto.h  dm.api  dm.h  fs.api  kbd.api  loop.api  loop.h  lvm.api  lvm.h  mdraid.api  mdraid.h  mpath.api  mpath.h  nvdimm.api  nvme.api  part.api  s390.api  smart.api  swap.api  swap.h  vdo.api
src/plugins/: Makefile.am  btrfs.c  btrfs.h  btrfs.h.in  check_deps.c  check_deps.h  crypto.c  crypto.h  dm.c  dm.h  dm_logging.c  dm_logging.h  fs.c  fs.h  kbd.c  kbd.h  loop.c  loop.h  lvm-dbus.c  lvm.c  lvm.h  mdraid.c  mdraid.h  mpath.c  mpath.h  nvdimm.c  nvdimm.h  part.c  part.h  part_err.c  part_err.h  s390.c  s390.h  smart.c  smart.h  swap.c  swap.h  test_btrfs.c  test_loop.c  test_lvm.c  (+5 more)
src/plugins/fs/: Makefile.am  bcachefs.c  bcachefs.h  btrfs.c  btrfs.h  common.c  common.h  exfat.c  exfat.h  ext.c  ext.h  f2fs.c  f2fs.h  fs.c  fs.h  generic.c  generic.h  mount.c  mount.h  nilfs.c  nilfs.h  ntfs.c  ntfs.h  reiserfs.c  reiserfs.h  udf.c  udf.h  vfat.c  vfat.h  xfs.c  xfs.h
src/plugins/lvm/: Makefile.am  lvm-common.c  lvm-dbus.c  lvm-private.h  lvm.c  lvm.h  vdo_stats.c  vdo_stats.h
src/plugins/nvme/: Makefile.am  nvme-error.c  nvme-fabrics.c  nvme-info.c  nvme-op.c  nvme-private.h  nvme.c  nvme.h
src/plugins/smart/: Makefile.am  drivedb-parser.c  libatasmart.c  smart-common.c  smart-private.h  smart.h  smartmontools.c
src/python/gi/overrides/: BlockDev.py  Makefile.am
src/utils/: Makefile.am  blockdev-utils.pc.in  dbus.c  dbus.h  dev_utils.c  dev_utils.h  exec.c  exec.h  extra_arg.c  extra_arg.h  logging.c  logging.h  module.c  module.h  sizes.c  sizes.h  test_sizes.c  utils.h
tests/: Makefile.am  README.rst  __init__.py  _lvm_cases.py  btrfs_test.py  crypto_test.py  dm_test.py  fs_test.py  kbd_test.py  library_test.py  loop_test.py  lvm_dbus_tests.py  lvm_test.py  md_test.py  mdraid_test.py  mpath_test.py  nvdimm_test.py  nvme_test.py  overrides_hack.py  overrides_test.py  part_test.py  run_tests.py  s390_test.py  skip.yml  smart_test.py  smartmontools_test.py  swap_test.py  utils.py  utils_test.py  vdo_test.py
tests/btrfs_new_version_format/: btrfs
tests/btrfs_subvols_docker/: btrfs
tests/default_config/: 00-default.cfg
tests/fake_utils/btrfs_low_version/: btrfs
tests/fake_utils/dm_low_version/: dmsetup
tests/fake_utils/fsck_f2fs_low_version/: fsck.f2fs
tests/fake_utils/loop_low_version/: losetup
tests/fake_utils/lvm_low_version/: lvm
tests/fake_utils/mdadm_extra_name_stuff/: mdadm
tests/fake_utils/mdadm_fw_RAID_examine/: mdadm
tests/fake_utils/mdadm_fw_RAID_examine_migrate/: mdadm
tests/fake_utils/smartctl/: smartctl
tests/fake_utils/swap_low_version/: mkswap
tests/fake_utils/swap_no_swapoff/: swapon
tests/fake_utils/swap_no_swapon/: swapoff
tests/fake_utils/utils_fake_util/: libblockdev-fake-util-stderr
tests/fs_tests/: __init__.py  bcachefs_test.py  btrfs_test.py  exfat_test.py  ext_test.py  f2fs_test.py  fs_test.py  generic_test.py  mount_test.py  nilfs_test.py  ntfs_test.py  reiserfs_test.py  udf_test.py  vfat_test.py  xfs_test.py
tests/loop_low_version/: losetup
tests/lvm_dbus_config/: 10-lvm-dbus.cfg
tests/mdadm_fw_RAID_examine/: mdadm
tests/mdadm_fw_raid_examine/: mdadm
tests/mdadm_no_metadata_examine/: mdadm
tests/mdraid_low_version/: mdadm
tests/mpath_low_version/: multipath
tests/mpath_no_mpathconf/: multipath
tests/plugin_multi_conf.d/: 00-default.cfg  10-lvm2.cfg
tests/plugin_prio_conf.d/: 00-default.cfg
tests/smart_dumps/: 01_old_ver.json  02_exit_err.json  03_exit_err_32.json  04_malformed.json  HGST_HMS5C4040BLE640.json  HGST_HUS726060ALA640.json  HGST_HUSMR3280ASS200.json  Hitachi_HDS5C3020ALA632.json  INTEL_SSDSC2BB120G4L.json  SEAGATE_ST600MP0036.json  TOSHIBA_AL15SEB120NY.json  TOSHIBA_AL15SEB18EQY.json  TOSHIBA_KPM5XMUG400G.json  TOSHIBA_THNSNH128GBST.json  WD4001FYYG-01SL3.json  WDC_WD10EFRX-68PJCN0.json
tests/swap_low_version/: mkswap
tests/swap_no_swapon/: mkswap
tests/test_configs/lvm_dbus_config/: 00-default.cfg  10-lvm-dbus.cfg
tests/test_configs/plugin_multi_conf.d/: 00-default.cfg  10-lvm2.cfg
tests/test_configs/plugin_prio_conf.d/: 00-default.cfg
tests/utils_fake_util/: libblockdev-fake-util  libblockdev-fake-util-fail
tools/: Makefile.am  lvm-cache-stats.c  vfat-resize.c
(+87 files in other folders)
